cheesed refresh bugs and made plan page

--- a/fitness-app/src/App.css
+++ b/fitness-app/src/App.css
@@ -92,3 +92,33 @@ button {
 .signup_login_field {
   width: 300px;
 }
+
+.plans {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding-left: 80px;
+  padding-right: 80px;
+  /* padding-bottom: 80px; */
+}
+
+.plans_heading_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%; /* Expand to fill the container's width */
+  padding-bottom: 20px; /* Add spacing between the heading/button and MyPlans */
+}
+
+/* .plan_heading {
+  padding-left: 20px;
+} */
+
+/* .create_plan_button {
+  padding-right: 200px;
+} */
+.View_Plan_Table {
+  padding-top: 50px;
+  width: 100%;
+}
