--- a/fitness-app/src/App.css
+++ b/fitness-app/src/App.css
@@ -122,3 +122,32 @@ button {
   padding-top: 50px;
   width: 100%;
 }
+
+.home {
+  display: flex;
+  flex-direction: column;
+  padding-left: 80px;
+  padding-right: 80px;
+}
+
+.top-row {
+  display: flex;
+  align-items: center; /* Center the heading and HomeMacroTable vertically */
+}
+
+.home_header {
+  margin-top: 50px;
+  width: 66%;
+}
+
+.home_table {
+  width: 100px;
+  align-items: center;
+  justify-content: center;
+}
+
+.bottom_home_table {
+  display: block;
+  margin-top: 10px; /* Add some spacing between the tables if needed */
+  width: 100%;
+}
