--- a/fitness-app/src/App.css
+++ b/fitness-app/src/App.css
@@ -172,7 +172,7 @@ button {
   background-color: #f5f5f5;
 }
 .plans-container {
-  max-width: 1000px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 20px;
   font-family: Arial, sans-serif; /* or any other font family you like */
@@ -189,6 +189,15 @@ button {
   margin: 0;
   font-size: 2em;
   color: #333;
+}
+
+.workout-plan-header {
+  display: flex;
+  justify-content: flex-start;
+  margin: 0;
+  font-size: 2em;
+  color: #333;
+  margin-bottom: 20px;
 }
 
 .plans-create-button {
