bug fix for delete plan, added message if user has no plans

--- a/fitness-app/src/App.css
+++ b/fitness-app/src/App.css
@@ -282,9 +282,10 @@ button {
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #e0e0e0;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  /* border: 1px solid #e0e0e0; */
+  /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
   border-radius: 8px;
+  margin-top: 20px;
 }
 
 .create_plan h1 {
