--- a/fitness-app/src/App.css
+++ b/fitness-app/src/App.css
@@ -362,3 +362,19 @@ button {
   justify-content: center;
   margin-top: 20px;
 }
+
+.View-More-Plan-Info-Box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80vw; /* Takes 80% of the viewport width. Adjust as needed. */
+  max-width: 600px; /* Setting a maximum width for larger screens. */
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px; /* Provides space between child elements */
+}
